# cairn

./: .gitignore  Brewfile  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE-APACHE  README.md  justfile  pyproject.toml  rust-toolchain.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  prelude.rs
crates/cve-2026-31431/: Cargo.toml  README.md
crates/cve-2026-31431/refs/: copy_fail_exp_annotated.py  notes.md
crates/cve-2026-31431/src/: main.rs
docs/: environment.md  methodology.md  references.md
scripts/: new-cve.sh
