[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["cairn contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/h1994st/cairn"
publish = false

[workspace.dependencies]
# Local
common = { path = "crates/common" }

# Systems
libc = "0.2"
nix = { version = "0.31", features = [
    "fs",
    "process",
    "user",
    "signal",
    "ioctl",
    "socket",
    "uio",
    "zerocopy",
] }

# Error handling and CLI
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Small, static-friendly release binaries.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Like release, but keep debug symbols so we can attach a debugger or
# read addresses out of a crash. Use with `cargo build --profile exploit`.
[profile.exploit]
inherits = "release"
strip = false
debug = true
